# mediatech

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  config.json  config.py  cron_config.txt  docker-compose.yml  download_data.py  log.json  main.py  pyproject.toml  release-please-config-prerelease.json  release-please-config-release.json  release-please-manifest.json  update_db.sh
.github/workflows/: cd.yml  ci.yml  ci_cd.yml  cron.yml  lint.yml  release.yml  unit-tests.yml
airflow/dags/: cnil.py  constit.py  dag_controller.py  data_gouv_datasets_catalog.py  delete_old_files.py  dole.py  legi.py  local_administrations_directory.py  service_public.py  state_administrations_directory.py  travail_emploi.py
airflow_config/dags/: .airflowignore  cnil.py  constit.py  dag_controller.py  data_gouv_datasets_catalog.py  delete_old_files.py  dole.py  legi.py  local_administrations_directory.py  service_public.py  state_administrations_directory.py  travail_emploi.py
airflow_config/dags/notifier/: notifications_template.py
config/: __init__.py  config.py  cron_config.txt  data_config.json  logging_config.py  requirements-apt-container.txt  requirements-apt.txt
database/: __init__.py  database_manage.py
database/sql_scripts/: init.sql
docs/: README_fr.md
download_and_processing/: __init__.py  download_files.py  files_processing.py
download_data/: __init__.py  data_history.json  download_files.py  process_xml.py
migrations/: env.py  utils.py
migrations/versions/: 2df822217cbd_create_process_table.py  5e1107633861_create_extractions_records.py  80c5ae26b090_create_download_records.py  faa974558d06_create_legifrance_table.py
scripts/: Readme.md  backup.sh  check_running_dags.sh  containers_deployment.sh  delete_old_files.sh  delete_old_logs.sh  deployment_packages.sh  download.py  extraction_and_export.py  initial_deployment.sh  manage_checkpoint.sh  periodic_update.sh  restore.sh  update.sh  write_tchap_message.sh
src/connectors/db/: __init__.py  sql.py
src/download/: base.py  data_gouv.py  dila.py  directory.py  sheets.py
src/exports/: administrations_directory.py  base.py  cnil.py  constit.py  data_gouv_datasets_catalog.py  dole.py  legi.py  service_public.py  travail_emploi.py
src/extraction/: base.py  data_gouv.py  sheets.py
src/process/: base.py
src/schemas/download/: models.py  schema.py  table.py
src/schemas/extractions/: models.py  schema.py  table.py
src/schemas/legifrance/: models.py  schema.py  table.py
src/schemas/process/: models.py  schema.py  table.py
src/utils/: data_helpers.py  dila.py  pattern.py  process.py  process_sheets.py  sheets_parser.py
tests/src/download/: test_cnil.py  test_directory.py  test_download_data_gouv.py  test_download_sheets.py  test_legifrance.py
tests/src/extraction/: test_base_extraction.py  test_sheets_extraction.py
tests/src/process/: test_process.py
tests/src/schemas/download/: test_download_records_table.py
tests/src/schemas/extractions/: test_extractions_table.py
tests/src/schemas/legifrance/: test_legi_table.py
tests/src/utils/: test_dila_utils.py
utils/: __init__.py  checkpoint_manager.py  chunking_and_embedding.py  data_helpers.py  embeddings.py  hugging_face.py  sheets_parser.py  test.ipynb
(+1 files in other folders)
