[project]
name = "albert-bibliotheque"
description = "ALBERT BIBLIOTHEQUE : Traitement des données mis à disposition publiquement par les administrations afin d'alimenter la base de connaissance d'ALBERT et de faciliter l'accès aux données publiques vectorisées dans la fonction publique."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["IA", "LLM", "ALBERT","DATA", "BIBLIOTHEQUE"]
authors = [
    {name = "Etalab", email = "etalab@modernisation.gouv.fr"}
]
version = "0.1.0"
dependencies = [
    "requests==2.32.3",
    "beautifulsoup4==4.13.3",
    "psycopg2==2.9.10",
    "dotenv==0.9.9",
    "openai==1.75.0",
    "langchain-text-splitters==0.3.8",
    "wget==3.2",
    "polars==1.29.0",
    "fastembed==0.6.1",
    "qdrant-client==1.14.2",
    "langchain==0.3.25",
    "lxml==5.4.0"
]

[project.urls]
Source = "https://github.com/etalab-ia/albert-bibliotheque"
Documentation = "https://github.com/etalab-ia/albert-bibliotheque"

[project.optional-dependencies]
dev = [
    "ruff"
]