[project]
name = "mediatech"
description = "MEDIATECH: Processing of data made publicly available by French government agencies, to facilitate access to vectorized and ready for AI projects public data within the french administrations."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["IA", "LLM", "ALBERT","DATA", "BIBLIOTHEQUE","MEDIATECH"]
authors = [
    {name = "Etalab", email = "etalab@modernisation.gouv.fr"},
    {name = "SDID", email = "sdid@interieur.gouv.fr"}
]
version = "0.5.0"
dependencies = [
    "requests==2.32.3",
    "beautifulsoup4==4.13.3",
    "dotenv==0.9.9",
    "wget==3.2",
    "lxml==6.0.2",
    "huggingface-hub==0.35.3",
    "docopt==0.6.2",
    "unidecode==1.4.0",
    "pandas==2.3.3",    
    "tqdm>=4.67.1",
    "datasets>=4.2.0",
]

[project.urls]
Source = "https://github.com/etalab-ia/mediatech"
Documentation = "https://github.com/etalab-ia/mediatech"

[project.optional-dependencies]
dev = [
    "ruff"
]

[project.scripts]
mediatech = "main:main"


[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
]

[tool.ruff]
exclude = [".venv", "utils", "config", "database", "download_and_processing"]
